# bot-huntag

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  download_queue.py  gallery copy.py  gallery.py  huntag.db  main.py  menu_v2.json  pyproject.toml  robot.py  schedule.json  update_isActive.txt  {dir_destiny}
database/: connection.py  db_connection.py  huntag.db
depreciated/: download_queue.py
devops/: download.ps1  queue_download.ps1  start.ps1
migration/: filter_huntag_v2.json  migrate.py
query/: activateAll.txt  activateOneSubcategoria.txt  deactivateAllDiferentSubcategoria.txt  deleteAllWithoutfileName.txt
src/: robot.py  settings.py
src/data/: filter_huntag_v1.json  migrate.py
src/database/: connection.py  connection_nosql.py  connection_sql.py
src/graph/: onedrive.py
src/model/: __init__.py  control.py  filter.py
src/models/: __init__.py  control.py  filter.py  kit.py
src/models/nosql/: control.py  filter.py  kit.py
src/models/sql/: __init__.py  control.py  filter.py  kit.py
src/repository/: control.py  filter.py  kit.py
src/repository/nosql/: control.py  filter.py  kit.py
src/repository/sql/: control.py  filter.py  kit.py
src/robot/: driver.py
src/robot/v1/: robot.py
src/robot/v2/: filter.py  login.py  robot.py
src/usecases/: driver.py  filter.py  kit.py  login.py  robot.py
src/usecases/v1/: robot.py
src/usecases/v2/: robot.py
src/utils/: conflog.py  logger.py  operating.py
utils/: dirfile.py  operating.py
